# Miblo

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  note.txt  package-lock.json
rust/: .env  Cargo.toml  note.txt  route.yaml
rust/src/: main.rs
rust/src/models/: mod.rs  user.rs
rust/src/routes/: mod.rs
rust_api/: .env  Cargo.toml  route.yaml
rust_api/src/models/: survey.rs
src/: lib.rs  main.rs
src/cli/: config.rs  mod.rs
src/engine/: create_folder.rs  fs.rs  global_fn.rs  handlebars_model.rs  mod.rs  model_template.rs  type_rust.rs
src/generator/: generator_handler.rs  generator_handlers.rs  generator_models.rs  generator_routes.rs  generator_server.rs  generator_sql.rs  generator_sqlx.rs  generator_tempalte.rs  generator_template.rs  generator_yaml.rs  mod.rs
src/models/: mod.rs  models_database.rs  models_models.rs  models_route.rs  models_server.rs
src/parser/: config_reader.rs  mod.rs  reader_yaml.rs
src/runtime/: mod.rs
src/services/: generator_service.rs  mod.rs
src/templates/handlebars/rust/: .env.hbs  Cargo.toml.hbs  config.rs.hbs  handlers.rs.hbs  login.rs.hbs  login_model.rs.hbs  main.rs.hbs  migration.sql.hbs  model.rs.hbs  register.rs.hbs  register_model.rs.hbs  route.yaml  routes.rs.hbs
src/templates/handlebars/rust/sql/: get.sql.hbs
src/templates/rust_api/: .env  route.yaml
src/templates/rust_api/src/: main.rs
src/templates/rust_api/src/config/: mod.rs
src/templates/rust_api/src/routes/: mod.rs
src/writer/: mod.rs  writer_handlers.rs  writer_migration.rs  writer_models.rs  writer_routes.rs  writer_sql.rs
