
[lib]
name = "miblo_cli"
path = "src/lib.rs"

[[bin]]
name = "miblo_cli"
path = "src/main.rs"



[profile.dev]
opt-level = 0
debug = 1
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3


[package]
name = "miblo_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
colored = "3.1.1"
fs_extra = "1.3.0"
handlebars = "6.4.0"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
