[package]
name = "miblo_cli_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
colored = "3.1.1"
fs_extra = "1.3.0"
handlebars = "6.4.0"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
indicatif = "0.18.4"
console = "0.16.3"
console-utils = "1.8.2"
